# anyscribe

./: Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  types.rs
src/audio/: cpal_input.rs  mod.rs  wav.rs
src/chunk/: mod.rs
src/output/: markdown.rs  mod.rs  multi.rs  stdout.rs
src/pipeline/: mod.rs  traits.rs
src/postprocess/: mod.rs
src/preprocess/: mod.rs
src/transcribe/: mod.rs  model.rs  openai.rs  whisper.rs
tests/: pipeline_test.rs
