[package]
name = "anyscribe"
version = "0.1.0"
edition = "2021"
description = "Simple, modular, portable transcription pipeline for audio-to-markdown processing."
license = "Apache-2.0"
repository = "https://github.com/jaychia/anyscribe"
homepage = "https://github.com/jaychia/anyscribe"
documentation = "https://docs.rs/anyscribe"
readme = "README.md"
keywords = ["transcription", "whisper", "audio", "speech-to-text", "pipeline"]
categories = ["multimedia::audio", "text-processing"]

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

cpal = "0.15"
rubato = "0.14"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "signal",
  "time",
  "io-std",
  "io-util",
] }
tokio-util = "0.7"

whisper-rs = "0.13"
ureq = "3"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
